# Folder-Terrorist

./: CMakeLists.txt  Helper.cpp  README.md  Tests.cpp  main.cpp
Functional/: FolderTerrorist.cpp  FolderTerrorist.h
